--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,9 @@
     "zf1/zend-oauth": "^1.12",
     "zf1/zend-registry": "^1.12",
     "zf1/zend-search-lucene": "^1.12",
-    "ext-imap": "*"
+    "ext-imap": "*",
+    "microsoft/microsoft-graph": "*",
+    "league/oauth2-client": "*"
   },
   "require-dev": {
     "browserstack/browserstack-local": "^1.1",
